# typode

./: MANIFEST.in  README.md  pyproject.toml  setup.py  typode.py
src/typode/: __init__.py  typode.py
